--- a/guneshukuk.WebUIv2/Views/Article/ArticleDetail.cshtml
+++ b/guneshukuk.WebUIv2/Views/Article/ArticleDetail.cshtml
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-    </div>
+   
 
 </header>
 
@@ -121,26 +121,28 @@
 
     .article-container {
         display: flex;
-                position: absolute;
-                top: 20px;
-                align-items: flex-start;
+        position: absolute;
+        top: 90px;
+        align-items: flex-start;
         justify-content: center;
-                width: 100%;
-                padding-top: 80px;
-                height: auto;
-            }
+        width: 100%;
+        padding-top: 100px;
+        height: auto;
+        background-color: rgba(255, 255, 255, 0.9);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
        
     }
 
     .article-box {
-                background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.9);
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
-                max-width: auto;
+        max-width: auto;
         width: 100%;
         box-sizing: border-box;
-                overflow: hidden;
-                padding: 10px;
+        overflow: hidden;
+        padding: 10px;
     }
 
     .article-image {
