--- a/guneshukuk.WebUIv2/wwwroot/blog/css/style.css
+++ b/guneshukuk.WebUIv2/wwwroot/blog/css/style.css
@@ -239,7 +239,7 @@ blockquote {
   padding: 10px 30px;
   font-weight: 600;
   text-transform: uppercase;
-  color: #fff;
+  color:black;
   transition: 350ms;
   letter-spacing: 1px;
   font-size: 13px;
@@ -252,7 +252,7 @@ blockquote {
 
 .btn-primary:hover {
   background: #000;
-  color: #fff;
+  color:forestgreen;
   border-color: #000;
 }
 
