--- a/guneshukuk.WebUIv2/Views/Article/Index.cshtml
+++ b/guneshukuk.WebUIv2/Views/Article/Index.cshtml
@@ -7,35 +7,42 @@
 
 <div style="justify-content:center;">
     <div class="article-list" >
-        @foreach (var article in Model.Articles)
+        @if (Model!=null)
         {
-            <div class="article-item">
-                <div class="article-image" style="background-image: url('@article.ArticleImageUrl');" >
-                    <a href="@Url.Action("ArticleDetail","Article",new {articleId=article.ArticleId})">
+            @foreach (var article in Model.Articles)
+            {
+                <div class="article-item">
+                    <div class="article-image" style="background-image: url('@article.ArticleImageUrl');">
+                        <a href="@Url.Action("ArticleDetail","Article",new {articleId=article.ArticleId})">
 
-                    </a>
+                        </a>
+                    </div>
+                    <div class="article-title">
+                        <a href="@Url.Action("ArticleDetail","Article",new {articleId=article.ArticleId})">@article.ArticleTitle</a>
+                    </div>
                 </div>
-                <div class="article-title" >
-                    <a href="@Url.Action("ArticleDetail","Article",new {articleId=article.ArticleId})">@article.ArticleTitle</a>
-                </div>
-            </div>
+            }
         }
+       
     </div>
-
-    <div class="pagination">
-        @if (Model.CurrentPage > 1)
-        {
-            <a href="@Url.Action("Index", new { page = Model.CurrentPage - 1 })">Previous</a>
-        }
-        @for (int i = 1; i <= Model.TotalPages; i++)
-        {
-            <a href="@Url.Action("Index", new { page = i })" class="@(i == Model.CurrentPage ? "active" : "")">@i</a>
-        }
-        @if (Model.CurrentPage < Model.TotalPages)
-        {
-            <a href="@Url.Action("Index", new { page = Model.CurrentPage + 1 })">Next</a>
-        }
-    </div>
+    @if (Model != null)
+    {
+        <div class="pagination">
+            @if (Model.CurrentPage > 1)
+            {
+                <a href="@Url.Action("Index", new { page = Model.CurrentPage - 1 })">Previous</a>
+            }
+            @for (int i = 1; i <= Model.TotalPages; i++)
+            {
+                <a href="@Url.Action("Index", new { page = i })" class="@(i == Model.CurrentPage ? "active" : "")">@i</a>
+            }
+            @if (Model.CurrentPage < Model.TotalPages)
+            {
+                <a href="@Url.Action("Index", new { page = Model.CurrentPage + 1 })">Next</a>
+            }
+        </div>
+    }
+    
 </div>
 
 
