--- a/guneshukuk.WebUIv2/Areas/Admin/Views/AdminLayout/Index.cshtml
+++ b/guneshukuk.WebUIv2/Areas/Admin/Views/AdminLayout/Index.cshtml
@@ -69,8 +69,11 @@
                             <nav class="sb-sidenav-menu-nested nav">
                                 <a class="nav-link" href="/Admin/About/ListAbouts">Hakkımda</a>
                                 <a class="nav-link" href="/Admin/Article/ListArticles">Makaleler</a>
+
                                 <a class="nav-link" href="/Admin/Consultancy/ListConsultancies">Hizmetler</a>
-                                <a class="nav-link" href="/Admin/Booking/ListBookings">Randevu Al</a>
+                                <a class="nav-link" href="/Admin/BookingDate/CreateBookingDate">Randevu Tarihi Oluştur</a>
+                                <a class="nav-link" href="/Admin/BookingDate/GetBookingDates">Randevu Tarihi Listele</a>
+                                <a class="nav-link" href="/Admin/Booking/ListBookings">Randevular</a>
                                 <a class="nav-link" href="/Admin/SocialMedia/ListSocialMedias">Sosyal Medya</a>
                                 <a class="nav-link" href="/Admin/Contact/ListContacts">İletişim</a>
                             </nav>
