--- a/guneshukuk.WebUIv2/Areas/Admin/Views/Booking/ListBookings.cshtml
+++ b/guneshukuk.WebUIv2/Areas/Admin/Views/Booking/ListBookings.cshtml
@@ -43,7 +43,7 @@
 										<td>@item.BookingEmail</td>
 										<td>@item.BookingPhone</td>
 										<td>@item.BookingMessage</td>
-										<td>@item.BookingDate</td>
+										<td>@item.BookingDate.Date</td>
 										<td><a href="/Admin/Booking/DeleteBooking/@item.BookingId" class="btn btn-outline-danger">Sil</a></td>
 										<td><a href="/Admin/Article/Updatebooking/@item.BookingId" class="btn btn-outline-success">Güncelle</a></td>
 									</tr>
